# Altccents-cp

./: .gitignore  CMakeLists.txt  README.org  build.sh  build_funcs.sh  run.sh  version.rc.in
Altccents/: CMakeLists.txt
Altccents-linux/: CMakeLists.txt
Altccents-linux/docs/: hook.txt  qt_keys.txt  x_keys.txt
Altccents-linux/include/Altccents/: AltccentsLinux.h  HookManager.h  X11.h
Altccents-linux/src/: AltccentsLinux.cpp  HookManager.cpp  Utils.h  X11.cpp  main.cpp
Altccents-win/: CMakeLists.txt
Altccents-win/include/Altccents/: AltccentsWin.h  HotkeyManager.h
Altccents-win/src/: AltccentsWin.cpp  HotkeyManager.cpp  main.cpp
Altccents/include/Altccents/: Altccents.h  Popup.h  Settings.h
Altccents/include/Altccents/AccentProfile/: AccentProfile.h
Altccents/include/Altccents/ArgManager/: ArgManager.h
Altccents/src/: Altccents.cpp  Popup.cpp
Altccents/src/AccentProfile/: AccentProfile.cpp
Altccents/src/ArgManager/: ArgManager.cpp
profiles/: ExampleProfile.json  dea.json  fr.json  rus.json
